--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -5,23 +5,42 @@
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
+    <link href="~/Content/Custom.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div class="navbar navbar-inverse" role="navigation">
-        <a class="navbar-brand" href="#">RAC</a>
-    </div>
+
+    @{
+        Html.RenderPartial("_HeaderNavBar");
+    }
+
     <div class="row panel">
         <div id="categories" class="col-xs-3">
 
-           maybe put some useful links here??
-            <br/> some kind of fun content?
+            maybe put some useful links here??
+            <br /> some kind of fun content?
 
         </div>
         <div class="col-xs-9">
             @RenderBody()
         </div>
     </div>
+
+
+    <footer>
+        <p>&nbsp;&copy; Ryan Compton - @DateTime.Now.Year</p>
+    </footer>
+
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    </script>
 
 </body>
 </html>
