--- a/RACdotcom/Content/Custom.css
+++ b/RACdotcom/Content/Custom.css
@@ -1,18 +1,36 @@
-﻿body {
-    margin: 0;
+﻿
+/* for footer gradient*/
+div.customFooter {
+    position: absolute;
+    width: 100vw;
+    bottom: 0;
+    overflow: hidden;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 13px;
+    background: #a0ffa5; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(black, #c1c5cc); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(black, #c1c5cc); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(black, #c1c5cc); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(black, #c1c5cc); /* Standard syntax */
 }
 
+
 ul.topnav {
+    text-align: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background: #a0ffa5; /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(#a0ffa5, black); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#a0ffa5, black); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#a0ffa5, black); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#a0ffa5, black); /* Standard syntax */
+    background: -webkit-linear-gradient(#c1c5cc, black); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#c1c5cc, black); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#c1c5cc, black); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#c1c5cc, black); /* Standard syntax */
 }
+
 
     ul.topnav li {
         float: left;
@@ -29,10 +47,9 @@ ul.topnav {
         }
 
             ul.topnav li a:hover {
-                background-color: #5d665c;
+                background-color: #8b9099;
+                color: black;
             }
-
-
 
         ul.topnav li.icon {
             display: none;
