--- a/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
+++ b/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
@@ -1,7 +1,7 @@
 ﻿<!-- header / navbar partial view -->
 
-<ul class="topnav" id="myTopnav">
-    <li><a class="active" href="#home">Home</a></li>
+<ul class="topnav" id="customNav">
+    <li><a href="#home">About</a></li>
     <li><a href="#pro">Career</a></li>
     <li><a href="#contact">Contact</a></li>
     <li class="icon">
