--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -9,20 +8,15 @@
     <title>@ViewBag.Title</title>
 </head>
 <body>
-
     @{
         Html.RenderPartial("_HeaderNavBar");
     }
-
-    <div class="row panel">
-            @RenderBody()
+    <div class="container">
+        @RenderBody()
     </div>
-
-
-    <div class="customFooter">
-        &nbsp;&copy; Ryan Compton - @DateTime.Now.Year
-    </div>
-
+    @{
+        Html.RenderPartial("_CustomFooter");
+    }
     <script>
         function myFunction() {
             var x = document.getElementById("customNav");
@@ -33,6 +27,5 @@
             }
         }
     </script>
-
 </body>
 </html>
