--- a/RACdotcom/Views/Pro/Pro.cshtml
+++ b/RACdotcom/Views/Pro/Pro.cshtml
@@ -2,3 +2,7 @@
     ViewBag.Title = "RAC: The Consummate Pro";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<div>
+    career: pressed keys and stuff happened
+</div>
