--- a/RACdotcom/Views/Home/Index.cshtml
+++ b/RACdotcom/Views/Home/Index.cshtml
@@ -4,8 +4,29 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
-    this is the home page
+<div class="container cloudtext col-lg-6 col-sm-8 col-xs-12" >
+    
+    <h1>Ryan Alan Compton</h1>
+    
+    <h4>Professional Software Developer</h4>
+   
+    <br/>
+    
+    <p>Welcome to my personal website!</p>
+    
+    <p>&nbsp&nbsp I'm a software developer living in the Louisville, KY area.
+    Having recently graduated from Indiana University Southeast, 
+    I am now employed as an IT Intern at Zirmed's downtown Louisville
+     office. </p>
+
+    <p>&nbsp&nbsp My computing interests include web applications, OpenGL, learning Linux and
+    command line, and many others. When I step away from the computer I'm a gamer,
+     basketball coach, martial artist,
+    Louisville Cardinal fan, and an avid hip-hop listener.</p>
+
+    <p>&nbsp&nbsp Check out the 'Career' page for my resume and a rundown of
+    the tools I'm familiar with, as well as the 'Contact' page for ways to track me down!</p>
+
 </div>
 
 
