--- a/RACdotcom/Views/Pro/Pro.cshtml
+++ b/RACdotcom/Views/Pro/Pro.cshtml
@@ -3,6 +3,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
+<div class="container cloudtext col-lg-6 col-sm-8 col-xs-12">
     career: pressed keys and stuff happened
 </div>
