--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
     @{
         Html.RenderPartial("_CustomFooter");
     }
+
+    <!-- need to figure out razor's renderscript for this -->
     <script>
         function myFunction() {
             var x = document.getElementById("customNav");
