--- a/RACdotcom/Views/Home/Index.cshtml
+++ b/RACdotcom/Views/Home/Index.cshtml
@@ -1,31 +1,46 @@
 ﻿
 @{
-    ViewBag.Title = "Ryan A. Compton: Computer Scientist";
+    ViewBag.Title = "Ryan A. Compton";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container cloudtext col-lg-6 col-sm-8 col-xs-12" >
-    
-    <h1>Ryan Alan Compton</h1>
-    
-    <h4>Professional Software Developer</h4>
-   
-    <br/>
-    
-    <p>Welcome to my personal website!</p>
-    
-    <p>&nbsp&nbsp I'm a software developer living in the Louisville, KY area.
-    Having recently graduated from Indiana University Southeast, 
-    I am now employed as an IT Intern at Zirmed's downtown Louisville
-     office. </p>
+<div class="container cloudtext">
 
-    <p>&nbsp&nbsp My computing interests include web applications, OpenGL, learning Linux and
-    command line, and many others. When I step away from the computer I'm a gamer,
-     basketball coach, martial artist,
-    Louisville Cardinal fan, and an avid hip-hop listener.</p>
+    <div class="row">
+        <div class="col-lg-6 col-md-8 col-sm-9 col-xs-6">
+            <h1>Ryan Alan Compton</h1>
 
-    <p>&nbsp&nbsp Check out the 'Career' page for my resume and a rundown of
-    the tools I'm familiar with, as well as the 'Contact' page for ways to track me down!</p>
+            <h4>(Professional Software Developer)</h4>
+        </div>
+        <div class="moon col-lg-6 col-md-4 col-sm-3 col-xs-6">
+        </div>
+
+    </div>
+    <div class="row">
+        <div class="col-lg-6 col-md-8 col-sm-9 col-xs-10">
+            <p>Welcome to my personal website!</p>
+
+            <p>
+                &nbsp&nbsp I'm a software developer living in the Louisville, KY area.
+                Having recently graduated from Indiana University Southeast,
+                I am now employed as an IT Intern at Zirmed's downtown Louisville
+                office.
+            </p>
+
+            <p>
+                &nbsp&nbsp My computing interests include web applications, competitive
+                programming problems, OpenGL, learning Linux and
+                command line, and many others. When I step away from the computer I'm a gamer,
+                basketball coach, martial artist,
+                Louisville Cardinal fan, and an avid hip-hop listener.
+            </p>
+
+            <p>
+                &nbsp&nbsp Check out the <a href="~/Pro/Pro">'Career'</a> page for my resume and a rundown of
+                the tools I'm familiar with, as well as the <a href="~/Contact/Contact">'Contact'</a> page for ways to track me down!
+            </p>
+        </div>
+    </div>
 
 </div>
 
