--- a/RACdotcom/Views/Home/Index.cshtml
+++ b/RACdotcom/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
         <div class="col-lg-6 col-md-8 col-sm-9 col-xs-6">
             <h1>Ryan Alan Compton</h1>
 
-            <h4>(Professional Software Developer)</h4>
+            <h5>Software Developer</h5>
         </div>
         <div class="moon col-lg-6 col-md-4 col-sm-3 col-xs-6">
         </div>
@@ -29,15 +29,15 @@
 
             <p>
                 &nbsp&nbsp My computing interests include web applications, competitive
-                programming problems, OpenGL, learning Linux and
-                command line, and many others. When I step away from the computer I'm a gamer,
-                basketball coach, martial artist,
-                Louisville Cardinal fan, and an avid hip-hop listener.
+                programming problems, Linux and
+                command line, OpenGL/graphics programming, and many others. I'm also interested in video games, 
+                basketball, martial arts, and Louisville Cardinal athletics.
             </p>
 
             <p>
                 &nbsp&nbsp Check out the <a href="~/Pro/Pro">'Career'</a> page for my resume and a rundown of
-                the tools I'm familiar with, as well as the <a href="~/Contact/Contact">'Contact'</a> page for ways to track me down!
+                the tools I'm familiar with, as well as the <a href="~/Contact/Contact">'Contact'</a> page for
+                 ways to track me down!
             </p>
         </div>
     </div>
