--- a/RACdotcom/Views/Pro/Pro.cshtml
+++ b/RACdotcom/Views/Pro/Pro.cshtml
@@ -5,4 +5,6 @@
 
 <div class="container cloudtext col-lg-6 col-sm-8 col-xs-12">
     career: pressed keys and stuff happened
+
+    <div class="computer"></div>
 </div>
