--- a/RACdotcom/Views/Shared/_CustomFooter.cshtml
+++ b/RACdotcom/Views/Shared/_CustomFooter.cshtml
@@ -1,5 +1,10 @@
 ﻿<!-- footer partial view -->
-
+<!-- these breaks prevent footer from covering content on mobile screens
+            better alternative?
+    -->
+<br />
+<br />
+<br />
 <div class="customFooter">
     &nbsp;&copy; Ryan Compton - @DateTime.Now.Year
 </div>
