--- a/RACdotcom/Views/Contact/Contact.cshtml
+++ b/RACdotcom/Views/Contact/Contact.cshtml
@@ -4,7 +4,15 @@
 }
 
 
-<div class="container cloudtext col-lg-6 col-sm-8 col-xs-12">
-   <div class="heartshape"></div>
-    
+<div class="container cloudtext">
+   
+    <h1>Let's Collaborate!</h1>
+
+    <p>my projects on <a href="https://github.com/rye720">github</a></p>
+
+    <p>my <a href="https://www.linkedin.com/in/ryan-compton-662b05110">linkedin</a> profile</p>
+
+    <p>e-mail me: </p>
+
 </div>
+
