--- a/RACdotcom/Views/Pro/Pro.cshtml
+++ b/RACdotcom/Views/Pro/Pro.cshtml
@@ -3,8 +3,45 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container cloudtext col-lg-6 col-sm-8 col-xs-12">
-    career: pressed keys and stuff happened
+<div class="container cloudtext">
 
-    <div class="computer"></div>
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+            <div><h1>My Skills</h1></div>
+            <div class="pixelComputer"></div>
+        </div>
+
+
+        <div class="hidden-md hidden-lg">
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+        </div>
+
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                <h3>Language Proficiencies</h3>
+                <h5>(in no particular order)</h5>
+                <ul class="list-group">
+                    <li class="list-group-item">Java</li>
+                    <li class="list-group-item">C#</li>
+                    <li class="list-group-item">C++</li>
+                    <li class="list-group-item">x86 Assembly (MASM)</li>
+                    <li class="list-group-item">SQL</li>
+                    <li class="list-group-item">HTML5</li>
+                    <li class="list-group-item">CSS3</li>
+                    <li class="list-group-item">JavaScript</li>
+                </ul>
+            </div>
+        
+
+    </div>
 </div>
+
+
+
