update readme.md with checklist, clean up custom.css

--- a/RACdotcom/Content/Custom.css
+++ b/RACdotcom/Content/Custom.css
@@ -106,7 +106,86 @@ div.pixelComputer {
         75px 70px 0 #161717,80px 70px 0 #5CFC51,85px 70px 0 #161717,
         90px 70px 0 #161717,95px 70px 0 #5CFC51,100px 70px 0 #161717,
         105px 70px 0 #161717,110px 70px 0 #5CFC51,115px 70px 0 #161717,
-        120px 70px 0 #CDE9F2,125px 70px 0 #CDE9F2,20px 75px 0 #CDE9F2,25px 75px 0 #AFC7CF,30px 75px 0 #161717,35px 75px 0 #5CFC51,40px 75px 0 #161717,45px 75px 0 #5CFC51,50px 75px 0 #161717,55px 75px 0 #5CFC51,60px 75px 0 #161717,65px 75px 0 #5CFC51,70px 75px 0 #161717,75px 75px 0 #161717,80px 75px 0 #5CFC51,85px 75px 0 #161717,90px 75px 0 #161717,95px 75px 0 #5CFC51,100px 75px 0 #161717,105px 75px 0 #161717,110px 75px 0 #5CFC51,115px 75px 0 #161717,120px 75px 0 #CDE9F2,125px 75px 0 #CDE9F2,20px 80px 0 #CDE9F2,25px 80px 0 #AFC7CF,30px 80px 0 #161717,35px 80px 0 #5CFC51,40px 80px 0 #5CFC51,45px 80px 0 #5CFC51,50px 80px 0 #161717,55px 80px 0 #5CFC51,60px 80px 0 #5CFC51,65px 80px 0 #5CFC51,70px 80px 0 #161717,75px 80px 0 #161717,80px 80px 0 #5CFC51,85px 80px 0 #161717,90px 80px 0 #161717,95px 80px 0 #5CFC51,100px 80px 0 #161717,105px 80px 0 #161717,110px 80px 0 #5CFC51,115px 80px 0 #161717,120px 80px 0 #CDE9F2,125px 80px 0 #CDE9F2,20px 85px 0 #CDE9F2,25px 85px 0 #AFC7CF,30px 85px 0 #161717,35px 85px 0 #161717,40px 85px 0 #161717,45px 85px 0 #161717,50px 85px 0 #161717,55px 85px 0 #161717,60px 85px 0 #161717,65px 85px 0 #161717,70px 85px 0 #161717,75px 85px 0 #161717,80px 85px 0 #161717,85px 85px 0 #161717,90px 85px 0 #161717,95px 85px 0 #161717,100px 85px 0 #161717,105px 85px 0 #161717,110px 85px 0 #161717,115px 85px 0 #161717,120px 85px 0 #CDE9F2,125px 85px 0 #CDE9F2,20px 90px 0 #CDE9F2,25px 90px 0 #CDE9F2,30px 90px 0 #CDE9F2,35px 90px 0 #CDE9F2,40px 90px 0 #CDE9F2,45px 90px 0 #CDE9F2,50px 90px 0 #CDE9F2,55px 90px 0 #CDE9F2,60px 90px 0 #CDE9F2,65px 90px 0 #CDE9F2,70px 90px 0 #CDE9F2,75px 90px 0 #CDE9F2,80px 90px 0 #CDE9F2,85px 90px 0 #CDE9F2,90px 90px 0 #CDE9F2,95px 90px 0 #CDE9F2,100px 90px 0 #CDE9F2,105px 90px 0 #CDE9F2,110px 90px 0 #CDE9F2,115px 90px 0 #CDE9F2,120px 90px 0 #CDE9F2,125px 90px 0 #CDE9F2,140px 90px 0 #CDE9F2,20px 95px 0 #CDE9F2,25px 95px 0 #CDE9F2,30px 95px 0 #CDE9F2,35px 95px 0 #CDE9F2,40px 95px 0 #CDE9F2,45px 95px 0 #CDE9F2,50px 95px 0 #CDE9F2,55px 95px 0 #CDE9F2,60px 95px 0 #CDE9F2,65px 95px 0 #CDE9F2,70px 95px 0 #CDE9F2,75px 95px 0 #CDE9F2,80px 95px 0 #CDE9F2,85px 95px 0 #CDE9F2,90px 95px 0 #CDE9F2,95px 95px 0 #CDE9F2,100px 95px 0 #CDE9F2,105px 95px 0 #CDE9F2,110px 95px 0 #CDE9F2,115px 95px 0 #CDE9F2,120px 95px 0 #CDE9F2,125px 95px 0 #CDE9F2,135px 95px 0 #B8D1D9,145px 95px 0 #CDE9F2,30px 100px 0 #848787,35px 100px 0 #848787,40px 100px 0 #848787,45px 100px 0 #848787,50px 100px 0 #848787,55px 100px 0 #848787,60px 100px 0 #848787,65px 100px 0 #848787,70px 100px 0 #848787,75px 100px 0 #848787,80px 100px 0 #848787,85px 100px 0 #848787,90px 100px 0 #848787,95px 100px 0 #848787,100px 100px 0 #848787,105px 100px 0 #848787,110px 100px 0 #848787,115px 100px 0 #848787,130px 100px 0 #B8D1D9,150px 100px 0 #B8D1D9,25px 105px 0 #CDE9F2,30px 105px 0 #CDE9F2,35px 105px 0 #CDE9F2,40px 105px 0 #CDE9F2,45px 105px 0 #CDE9F2,50px 105px 0 #CDE9F2,55px 105px 0 #CDE9F2,60px 105px 0 #CDE9F2,65px 105px 0 #CDE9F2,70px 105px 0 #CDE9F2,75px 105px 0 #CDE9F2,80px 105px 0 #CDE9F2,85px 105px 0 #CDE9F2,90px 105px 0 #CDE9F2,95px 105px 0 #CDE9F2,100px 105px 0 #CDE9F2,105px 105px 0 #CDE9F2,110px 105px 0 #CDE9F2,120px 105px 0 #B8D1D9,125px 105px 0 #B8D1D9,130px 105px 0 #B8D1D9,145px 105px 0 #B8D1D9,20px 110px 0 #CDE9F2,25px 110px 0 #848787,30px 110px 0 #848787,35px 110px 0 #848787,40px 110px 0 #848787,45px 110px 0 #848787,50px 110px 0 #848787,55px 110px 0 #848787,60px 110px 0 #848787,65px 110px 0 #848787,70px 110px 0 #848787,75px 110px 0 #848787,80px 110px 0 #848787,85px 110px 0 #848787,90px 110px 0 #848787,95px 110px 0 #B8D1D9,100px 110px 0 #848787,105px 110px 0 #848787,110px 110px 0 #848787,115px 110px 0 #B8D1D9,140px 110px 0 #CDE9F2,15px 115px 0 #CDE9F2,20px 115px 0 #848787,25px 115px 0 #848787,30px 115px 0 #848787,35px 115px 0 #848787,40px 115px 0 #848787,45px 115px 0 #848787,50px 115px 0 #848787,55px 115px 0 #848787,60px 115px 0 #848787,65px 115px 0 #848787,70px 115px 0 #848787,75px 115px 0 #848787,80px 115px 0 #848787,85px 115px 0 #848787,90px 115px 0 #848787,95px 115px 0 #848787,100px 115px 0 #B8D1D9,105px 115px 0 #848787,110px 115px 0 #848787,115px 115px 0 #848787,120px 115px 0 #B8D1D9,135px 115px 0 #B8D1D9,140px 115px 0 #B8D1D9,10px 120px 0 #CDE9F2,15px 120px 0 #CDE9F2,20px 120px 0 #CDE9F2,25px 120px 0 #CDE9F2,30px 120px 0 #CDE9F2,35px 120px 0 #CDE9F2,40px 120px 0 #CDE9F2,45px 120px 0 #CDE9F2,50px 120px 0 #CDE9F2,55px 120px 0 #CDE9F2,60px 120px 0 #CDE9F2,65px 120px 0 #CDE9F2,70px 120px 0 #CDE9F2,75px 120px 0 #CDE9F2,80px 120px 0 #CDE9F2,85px 120px 0 #CDE9F2,90px 120px 0 #CDE9F2,95px 120px 0 #CDE9F2,100px 120px 0 #CDE9F2,105px 120px 0 #CDE9F2,110px 120px 0 #CDE9F2,115px 120px 0 #CDE9F2,120px 120px 0 #CDE9F2,125px 120px 0 #CDE9F2,130px 120px 0 #CDE9F2,135px 120px 0 #848787,140px 120px 0 #848787,145px 120px 0 #B8D1D9,130px 125px 0 #CDE9F2,135px 125px 0 #848787,140px 125px 0 #848787,145px 125px 0 #B8D1D9,130px 130px 0 #CDE9F2,135px 130px 0 #CDE9F2,140px 130px 0 #CDE9F2,145px 130px 0 #B8D1D9,135px 135px 0 #B8D1D9,140px 135px 0 #B8D1D9;
+        120px 70px 0 #CDE9F2,125px 70px 0 #CDE9F2,20px 75px 0 #CDE9F2,
+        25px 75px 0 #AFC7CF,30px 75px 0 #161717,35px 75px 0 #5CFC51,
+        40px 75px 0 #161717,45px 75px 0 #5CFC51,50px 75px 0 #161717,
+        55px 75px 0 #5CFC51,60px 75px 0 #161717,65px 75px 0 #5CFC51,
+        70px 75px 0 #161717,75px 75px 0 #161717,80px 75px 0 #5CFC51,
+        85px 75px 0 #161717,90px 75px 0 #161717,95px 75px 0 #5CFC51,
+        100px 75px 0 #161717,105px 75px 0 #161717,110px 75px 0 #5CFC51,
+        115px 75px 0 #161717,120px 75px 0 #CDE9F2,125px 75px 0 #CDE9F2,
+        20px 80px 0 #CDE9F2,25px 80px 0 #AFC7CF,30px 80px 0 #161717,
+        35px 80px 0 #5CFC51,40px 80px 0 #5CFC51,45px 80px 0 #5CFC51,
+        50px 80px 0 #161717,55px 80px 0 #5CFC51,60px 80px 0 #5CFC51,
+        65px 80px 0 #5CFC51,70px 80px 0 #161717,75px 80px 0 #161717,
+        80px 80px 0 #5CFC51,85px 80px 0 #161717,90px 80px 0 #161717,
+        95px 80px 0 #5CFC51,100px 80px 0 #161717,105px 80px 0 #161717,
+        110px 80px 0 #5CFC51,115px 80px 0 #161717,120px 80px 0 #CDE9F2,
+        125px 80px 0 #CDE9F2,20px 85px 0 #CDE9F2,25px 85px 0 #AFC7CF,
+        30px 85px 0 #161717,35px 85px 0 #161717,40px 85px 0 #161717,
+        45px 85px 0 #161717,50px 85px 0 #161717,55px 85px 0 #161717,
+        60px 85px 0 #161717,65px 85px 0 #161717,70px 85px 0 #161717,
+        75px 85px 0 #161717,80px 85px 0 #161717,85px 85px 0 #161717,
+        90px 85px 0 #161717,95px 85px 0 #161717,100px 85px 0 #161717,
+        105px 85px 0 #161717,110px 85px 0 #161717,115px 85px 0 #161717,
+        120px 85px 0 #CDE9F2,125px 85px 0 #CDE9F2,20px 90px 0 #CDE9F2,
+        25px 90px 0 #CDE9F2,30px 90px 0 #CDE9F2,35px 90px 0 #CDE9F2,
+        40px 90px 0 #CDE9F2,45px 90px 0 #CDE9F2,50px 90px 0 #CDE9F2,
+        55px 90px 0 #CDE9F2,60px 90px 0 #CDE9F2,65px 90px 0 #CDE9F2,
+        70px 90px 0 #CDE9F2,75px 90px 0 #CDE9F2,80px 90px 0 #CDE9F2,
+        85px 90px 0 #CDE9F2,90px 90px 0 #CDE9F2,95px 90px 0 #CDE9F2,
+        100px 90px 0 #CDE9F2,105px 90px 0 #CDE9F2,110px 90px 0 #CDE9F2,
+        115px 90px 0 #CDE9F2,120px 90px 0 #CDE9F2,125px 90px 0 #CDE9F2,
+        140px 90px 0 #CDE9F2,20px 95px 0 #CDE9F2,25px 95px 0 #CDE9F2,
+        30px 95px 0 #CDE9F2,35px 95px 0 #CDE9F2,40px 95px 0 #CDE9F2,
+        45px 95px 0 #CDE9F2,50px 95px 0 #CDE9F2,55px 95px 0 #CDE9F2,
+        60px 95px 0 #CDE9F2,65px 95px 0 #CDE9F2,70px 95px 0 #CDE9F2,
+        75px 95px 0 #CDE9F2,80px 95px 0 #CDE9F2,85px 95px 0 #CDE9F2,
+        90px 95px 0 #CDE9F2,95px 95px 0 #CDE9F2,100px 95px 0 #CDE9F2,
+        105px 95px 0 #CDE9F2,110px 95px 0 #CDE9F2,115px 95px 0 #CDE9F2,
+        120px 95px 0 #CDE9F2,125px 95px 0 #CDE9F2,135px 95px 0 #B8D1D9,
+        145px 95px 0 #CDE9F2,30px 100px 0 #848787,35px 100px 0 #848787,
+        40px 100px 0 #848787,45px 100px 0 #848787,50px 100px 0 #848787,
+        55px 100px 0 #848787,60px 100px 0 #848787,65px 100px 0 #848787,
+        70px 100px 0 #848787,75px 100px 0 #848787,80px 100px 0 #848787,
+        85px 100px 0 #848787,90px 100px 0 #848787,95px 100px 0 #848787,
+        100px 100px 0 #848787,105px 100px 0 #848787,110px 100px 0 #848787,
+        115px 100px 0 #848787,130px 100px 0 #B8D1D9,150px 100px 0 #B8D1D9,
+        25px 105px 0 #CDE9F2,30px 105px 0 #CDE9F2,35px 105px 0 #CDE9F2,
+        40px 105px 0 #CDE9F2,45px 105px 0 #CDE9F2,50px 105px 0 #CDE9F2,
+        55px 105px 0 #CDE9F2,60px 105px 0 #CDE9F2,65px 105px 0 #CDE9F2,
+        70px 105px 0 #CDE9F2,75px 105px 0 #CDE9F2,80px 105px 0 #CDE9F2,
+        85px 105px 0 #CDE9F2,90px 105px 0 #CDE9F2,95px 105px 0 #CDE9F2,
+        100px 105px 0 #CDE9F2,105px 105px 0 #CDE9F2,110px 105px 0 #CDE9F2,
+        120px 105px 0 #B8D1D9,125px 105px 0 #B8D1D9,130px 105px 0 #B8D1D9,
+        145px 105px 0 #B8D1D9,20px 110px 0 #CDE9F2,25px 110px 0 #848787,
+        30px 110px 0 #848787,35px 110px 0 #848787,40px 110px 0 #848787,
+        45px 110px 0 #848787,50px 110px 0 #848787,55px 110px 0 #848787,
+        60px 110px 0 #848787,65px 110px 0 #848787,70px 110px 0 #848787,
+        75px 110px 0 #848787,80px 110px 0 #848787,85px 110px 0 #848787,
+        90px 110px 0 #848787,95px 110px 0 #B8D1D9,100px 110px 0 #848787,
+        105px 110px 0 #848787,110px 110px 0 #848787,115px 110px 0 #B8D1D9,
+        140px 110px 0 #CDE9F2,15px 115px 0 #CDE9F2,20px 115px 0 #848787,
+        25px 115px 0 #848787,30px 115px 0 #848787,35px 115px 0 #848787,
+        40px 115px 0 #848787,45px 115px 0 #848787,50px 115px 0 #848787,
+        55px 115px 0 #848787,60px 115px 0 #848787,65px 115px 0 #848787,
+        70px 115px 0 #848787,75px 115px 0 #848787,80px 115px 0 #848787,
+        85px 115px 0 #848787,90px 115px 0 #848787,95px 115px 0 #848787,
+        100px 115px 0 #B8D1D9,105px 115px 0 #848787,110px 115px 0 #848787,
+        115px 115px 0 #848787,120px 115px 0 #B8D1D9,135px 115px 0 #B8D1D9,
+        140px 115px 0 #B8D1D9,10px 120px 0 #CDE9F2,15px 120px 0 #CDE9F2,
+        20px 120px 0 #CDE9F2,25px 120px 0 #CDE9F2,30px 120px 0 #CDE9F2,
+        35px 120px 0 #CDE9F2,40px 120px 0 #CDE9F2,45px 120px 0 #CDE9F2,
+        50px 120px 0 #CDE9F2,55px 120px 0 #CDE9F2,60px 120px 0 #CDE9F2,
+        65px 120px 0 #CDE9F2,70px 120px 0 #CDE9F2,75px 120px 0 #CDE9F2,
+        80px 120px 0 #CDE9F2,85px 120px 0 #CDE9F2,90px 120px 0 #CDE9F2,
+        95px 120px 0 #CDE9F2,100px 120px 0 #CDE9F2,105px 120px 0 #CDE9F2,
+        110px 120px 0 #CDE9F2,115px 120px 0 #CDE9F2,120px 120px 0 #CDE9F2,
+        125px 120px 0 #CDE9F2,130px 120px 0 #CDE9F2,135px 120px 0 #848787,
+        140px 120px 0 #848787,145px 120px 0 #B8D1D9,130px 125px 0 #CDE9F2,
+        135px 125px 0 #848787,140px 125px 0 #848787,145px 125px 0 #B8D1D9,
+        130px 130px 0 #CDE9F2,135px 130px 0 #CDE9F2,140px 130px 0 #CDE9F2,
+        145px 130px 0 #B8D1D9,135px 135px 0 #B8D1D9,140px 135px 0 #B8D1D9;
 }
 
 
