bundling mostly! plus little things

--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -2,32 +2,26 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
-    <link href="~/Content/custom.css" rel="stylesheet" />
+    @*<link href="~/Content/bootstrap.css" rel="stylesheet" />
+        <link href="~/Content/bootstrap-theme.css" rel="stylesheet" />
+        <link href="~/Content/custom.css" rel="stylesheet" />*@
+    <link href="~/Content/bundle.min.css" rel="stylesheet" />
     <title>@ViewBag.Title</title>
 </head>
 <body>
     @{
         Html.RenderPartial("_HeaderNavBar");
     }
-    
-        @RenderBody()
+
+    @RenderBody()
 
     @{
         Html.RenderPartial("_CustomFooter");
     }
+    <!-- is this is an acceptable way to use bundling?
+        do i have to use razor's scripts.render()? 
+        -->>
+    <script src="~/Scripts/bundle.min.js"></script>
 
-    <!-- need to figure out razor's renderscript for this -->
-    <script>
-        function myFunction() {
-            var x = document.getElementById("customNav");
-            if (x.className == "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
-        }
-    </script>
 </body>
 </html>
