--- a/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
+++ b/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
@@ -4,6 +4,6 @@
     <li>@Html.ActionLink("Career", "Pro", "Pro")</li>
     <li>@Html.ActionLink("Contact", "Contact", "Contact")</li>
     <li class="icon">
-        <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
+        <a href="javascript:void(0);" style="font-size:15px;" onclick="navSwitch()">☰</a>
     </li>
 </ul>
