changed bundling and broke it, figure out how to fix!

--- a/RACdotcom/Views/Contact/Contact.cshtml
+++ b/RACdotcom/Views/Contact/Contact.cshtml
@@ -12,7 +12,7 @@
 
     <p>my <a href="https://www.linkedin.com/in/ryan-compton-662b05110">linkedin</a> profile</p>
 
-    <p>e-mail me: </p>
+    <p>e-mail me: at my <a href="mailto:racomp01@gmail.com">Gmail</a> or at <a href="mailto:ryan.compton@ZIRMED.com">work</a> </p>
 
 </div>
 
