--- a/RACdotcom/Views/Pro/Pro.cshtml
+++ b/RACdotcom/Views/Pro/Pro.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "RAC: The Consummate Pro";
+    ViewBag.Title = "RAC: Career";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
