--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -6,11 +6,23 @@
     @Styles.Render("~/Content/css")
 </head>
 <body>
-        @Html.Partial("_HeaderNavBar")
-        @RenderBody()
-        @Html.Partial("_CustomFooter")
-        @Scripts.Render("~/bundles/jQuery")
-        @Scripts.Render("~/bundles/bootstrap")
-        @Scripts.Render("~/bundles/customJS")     
+    @Html.Partial("_HeaderNavBar")
+    @RenderBody()
+    @Html.Partial("_CustomFooter")
+    @Scripts.Render("~/bundles/jQuery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/customJS")
+
+
+    <!-- need to figure out a jQuery function to do this -->
+    <!-- Google Analytics -->
+    <script>
+        window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('send', 'pageview', location.pathname);
+    </script>
+    <script async src='https://www.google-analytics.com/analytics.js'></script>
+    <!-- End Google Analytics -->
+
 </body>
 </html>
