implement ga pageviews, still needs testing

--- a/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
+++ b/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
@@ -1,8 +1,8 @@
 ﻿<!-- header / navbar partial view -->
 <ul class="topnav" id="customNav">
-    <li id="homeButton">@Html.ActionLink("Ryan A. Compton", "Index", "Home")</li>
-    <li id="careerButton">@Html.ActionLink("Career", "Pro", "Pro")</li>
-    <li id="contactButton">@Html.ActionLink("Contact", "Contact", "Contact")</li>
+    <li id="homeBtn">@Html.ActionLink("Ryan A. Compton", "Index", "Home")</li>
+    <li id="careerBtn">@Html.ActionLink("Career", "Pro", "Pro")</li>
+    <li id="contactBtn">@Html.ActionLink("Contact", "Contact", "Contact")</li>
     <li class="icon">
         <!-- i think using the onlick method may be bad. look for an alternative? -->
         <a href="javascript:void(0);" style="font-size:15px;" onclick="navSwitch()">☰</a>
