--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -16,11 +16,11 @@
 
     <!-- need to figure out a jQuery function to do this -->
     <!-- Google Analytics -->
-    <script>
+    @*<script>
         window.ga = window.ga || function () { (ga.q = ga.q || []).push(arguments) }; ga.l = +new Date;
         ga('create', 'UA-XXXXX-Y', 'auto');
         ga('send', 'pageview', location.pathname);
-    </script>
+    </script>*@
     <script async src='https://www.google-analytics.com/analytics.js'></script>
     <!-- End Google Analytics -->
 
