attempting module pattern for js, needs fixing

--- a/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
+++ b/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
@@ -4,7 +4,6 @@
     <li id="careerBtn">@Html.ActionLink("Career", "Pro", "Pro")</li>
     <li id="contactBtn">@Html.ActionLink("Contact", "Contact", "Contact")</li>
     <li class="icon">
-        <!-- i think using the onlick method may be bad. look for an alternative? -->
-        <a href="javascript:void(0);" style="font-size:15px;" onclick="navSwitch()">☰</a>
+        <a id="navToggle"style="font-size:15px;">☰</a>
     </li>
 </ul>
