--- a/RACdotcom/Views/Home/Index.cshtml
+++ b/RACdotcom/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Ryan A. Compton";
+    ViewBag.Title = "RAC: Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -36,8 +36,8 @@
             </p>
 
             <p>
-                &nbsp&nbsp Check out the <a href="~/Career">'Career'</a> page for my resume and a rundown of
-                the tools I'm familiar with, as well as the <a href="~/Contact">'Contact'</a> page for
+                &nbsp&nbsp Check out the <a id="careerBtn" href="~/Career">Career</a> page for my resume and a rundown of
+                the tools I'm familiar with, as well as the <a id="contactBtn" href="~/Contact">Contact</a> page for
                 ways to track me down!
             </p>
 
