--- a/RACdotcom/Views/Home/Index.cshtml
+++ b/RACdotcom/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "RAC: Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -10,7 +9,7 @@
         <div class="col-lg-6 col-md-8 col-sm-9 col-xs-6">
             <h1>Ryan Alan Compton</h1>
 
-            <h5>Software Developer</h5>
+            <h5><u>Software Developer</u></h5>
         </div>
         <div class="moon col-lg-6 col-md-4 col-sm-3 col-xs-6">
         </div>
@@ -24,7 +23,7 @@
             <p>
                 &nbsp&nbsp I'm a software developer living in the Louisville, KY area.
                 Having recently graduated from Indiana University Southeast,
-                I am now employed as an IT Intern at Zirmed's downtown Louisville
+                I am now employed as an IT Intern at ZirMed's downtown Louisville
                 office.
             </p>
 
