--- a/RACdotcom/Views/Contact/Contact.cshtml
+++ b/RACdotcom/Views/Contact/Contact.cshtml
@@ -4,7 +4,14 @@
 }
 <div class="container cloudtext">
     <h1>Let's Collaborate!</h1>
-    <p>my projects on <a href="https://github.com/rye720">github</a></p>
-    <p>my <a href="https://www.linkedin.com/in/ryan-compton-662b05110">linkedin</a> profile</p>
-    <p>e-mail me: at my <a href="mailto:racomp01@gmail.com">Gmail</a> or at <a href="mailto:ryan.compton@ZIRMED.com">work</a> </p>
+    <div class="row">
+        <div class="col-lg-6">
+            <p>my projects on <a href="https://github.com/rye720">github</a></p>
+            <p>my <a href="https://www.linkedin.com/in/ryan-compton-662b05110">linkedin</a> profile</p>
+            <p>e-mail me: at my <a href="mailto:racomp01@gmail.com">Gmail</a> or at <a href="mailto:ryan.compton@ZIRMED.com">work</a> </p>
+        </div>
+        <div class="col-lg-6">
+            <img src="~/Content/ry3atwork.jpg" alt="me at work" />
+        </div>
+    </div>
 </div>
