--- a/RACdotcom/Views/Home/Index.cshtml
+++ b/RACdotcom/Views/Home/Index.cshtml
@@ -17,14 +17,14 @@
             <p>
                 &nbsp&nbsp I'm a software developer living in the Louisville, KY area.
                 Having recently graduated from Indiana University Southeast,
-                I am now employed as an IT Intern at ZirMed's downtown Louisville
+                I am now employed as an IT Intern at <a href="http://public.zirmed.com/">ZirMed</a>'s downtown Louisville
                 office.
             </p>
             <p>
                 &nbsp&nbsp My computing interests include web applications, competitive
-                programming problems, Linux and
-                command line, OpenGL/graphics programming, and many others. I'm also interested in video games,
-                basketball, martial arts, and Louisville Cardinal athletics.
+                programming <a href="https://open.kattis.com/problems">problems</a>, Linux and
+                command line, learning OpenGL/graphics programming, and many others. I'm also interested in video games,
+                 basketball, martial arts, and Louisville Cardinal athletics.
             </p>
             <p>
                 &nbsp&nbsp Check out the <a id="careerBtn" href="~/Career">Career</a> page for my resume and a rundown of
