--- a/RACdotcom/Views/Pro/Pro.cshtml
+++ b/RACdotcom/Views/Pro/Pro.cshtml
@@ -9,11 +9,14 @@
             <div class="pixelComputer"></div>
         </div>
         <div class="hidden-md hidden-lg">
-            <br /><br /><br /><br /><br /><br /><br /><br /><br />
+            <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <h3>Language Proficiencies</h3>
             <h5>(in no particular order)</h5>
+
+            <div class="nailstring"></div>
+            <br/><br/>
             <ul class="list-group">
                 <li class="list-group-item">Java</li>
                 <li class="list-group-item">C#</li>
