--- a/RACdotcom/Views/Contact/Contact.cshtml
+++ b/RACdotcom/Views/Contact/Contact.cshtml
@@ -5,13 +5,15 @@
 <div class="container cloudtext">
     <h1>Let's Collaborate!</h1>
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <p>my projects on <a href="https://github.com/rye720">github</a></p>
             <p>my <a href="https://www.linkedin.com/in/ryan-compton-662b05110">linkedin</a> profile</p>
-            <p>e-mail me: at my <a href="mailto:racomp01@gmail.com">Gmail</a> or at <a href="mailto:ryan.compton@ZIRMED.com">work</a> </p>
+            <p>e-mail me: at my <a href="mailto:racomp01@gmail.com">Gmail</a> or at <a href="mailto:ryan.compton@ZIRMED.com">work</a></p>
         </div>
-        <div class="col-lg-6">
-            <img src="~/Content/ry3atwork.jpg" alt="me at work" />
+    </div>
+    <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-8">
+            <img class="img-circle smallpic" src="~/Content/ry3working.jpg" alt="me at work">
         </div>
     </div>
 </div>
