Images folder and readme

--- a/RACdotcom/Views/Contact/Contact.cshtml
+++ b/RACdotcom/Views/Contact/Contact.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-8">
-            <img class="img-circle smallpic" src="~/Content/ry3working.jpg" alt="me at work">
+            <img class="img-circle smallpic" src="~/Content/Images/ry3working.jpg" alt="me at work">
         </div>
     </div>
 </div>
