--- a/RACdotcom/Views/Home/Index.cshtml
+++ b/RACdotcom/Views/Home/Index.cshtml
@@ -15,15 +15,15 @@
         <div class="col-lg-6 col-md-8 col-sm-9 col-xs-10">
             <p>Welcome to my personal website!</p>
             <p>
-                &nbsp&nbsp I'm a software developer living in the Louisville, KY area.
-                Having recently graduated from Indiana University Southeast,
+                &nbsp&nbsp I'm a software developer living in Louisville, KY.
+                A recent graduate of Indiana University Southeast,
                 I am now employed as an IT Intern at <a href="http://public.zirmed.com/">ZirMed</a>'s downtown Louisville
                 office.
             </p>
             <p>
                 &nbsp&nbsp My computing interests include web applications, competitive
-                programming <a href="https://open.kattis.com/problems">problems</a>, Linux and
-                command line, learning OpenGL/graphics programming, and many others. I'm also interested in video games,
+                programming <a href="https://open.kattis.com/problems">problems</a>, Linux,
+                Bash, learning OpenGL/graphics programming, and many others. I'm also interested in video games,
                  basketball, martial arts, and Louisville Cardinal athletics.
             </p>
             <p>
