update index and professional content

--- a/RACdotcom/Views/Contact/Contact.cshtml
+++ b/RACdotcom/Views/Contact/Contact.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container cloudtext">
-    <h1>Let's Collaborate!</h1>
+    <h1>Contact Info</h1>
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <p>my projects on <a href="https://github.com/rye720">github</a></p>
@@ -12,8 +12,8 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-8">
-            <img class="img-circle smallpic" src="~/Content/Images/ry3working.jpg" alt="me at work">
+        <div class="col-lg-4 col-md-4 col-sm-6 col-xs-9">
+            <img class="img-circle smallpic" src="~/Images/ry3working.jpg" alt="me at work">
         </div>
     </div>
 </div>
