--- a/RACdotcom/Views/Home/Index.cshtml
+++ b/RACdotcom/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
             <p>Welcome to my personal website!</p>
             <p>
                 &nbsp&nbsp I'm a software developer living in Louisville, KY.
-                A recent graduate of Indiana University Southeast,
+                A graduate of Indiana University Southeast,
                 I am now employed as an IT Intern at <a href="http://public.zirmed.com/">ZirMed</a>'s downtown Louisville
                 office.
             </p>
@@ -24,10 +24,11 @@
                 &nbsp&nbsp My computing interests include web applications, competitive
                 programming <a href="https://open.kattis.com/problems">problems</a>, Linux,
                 Bash, learning OpenGL/graphics programming, and many others. I'm also interested in video games,
-                 basketball, martial arts, and Louisville Cardinal athletics.
+                basketball, martial arts, and Louisville Cardinal athletics.
             </p>
             <p>
-                &nbsp&nbsp Check out the <a id="careerBtn" href="~/Career">Career</a> page for my resume and a rundown of
+                &nbsp&nbsp Check out the <a id="careerBtn" href="~/Career">Career</a> page for
+                a rundown of my experience with programming and
                 the tools I'm familiar with, as well as the <a id="contactBtn" href="~/Contact">Contact</a> page for
                 ways to track me down!
             </p>
