--- a/RACdotcom/Views/Pro/Pro.cshtml
+++ b/RACdotcom/Views/Pro/Pro.cshtml
@@ -13,7 +13,7 @@
                 </div>
                 <p>
                     <h3>my background with programming</h3>
-                    &nbsp&nbspAfter trying a few different jobs and majors out,
+                    &nbsp;&nbsp;After trying a few different jobs and majors out,
                     I decided to go back to school in 2013 to
                     try an Intro to CS class. Pretty soon afterward, I knew I'd found what I
                     wanted to do for a living. I graduated from Indiana University
@@ -21,7 +21,7 @@
                     bachelor's degree in CS and a minor in Math.
                 </p>
                 <p>
-                    &nbsp&nbspWhile in school, I exposed myself to as many
+                    &nbsp;&nbsp;While in school, I exposed myself to as many
                     different tools, languages, and ways to get involved with programming
                     as I could find. I competed in <a href="http://derbyhacks.io/#/home">hackathons</a>,
                     cyber defense <a href="http://www.nationalccdc.org/">competitions</a>, and
@@ -33,7 +33,7 @@
                     <a href="https://github.com/rye720/GreenMonkeys">simulate population biology</a>.
                 </p>
                 <p>
-                    &nbsp&nbsp Professionally, I spent a year working with ASP.NET web forms
+                    &nbsp;&nbsp;Professionally, I spent a year working with ASP.NET web forms
                     as well as tutoring in the CS department at IUS for 2 years. Now I'm at ZirMed
                     doing .NET development and
                     soaking up as much knowledge as I can!
