still fiddling with module pattern

--- a/RACdotcom/Views/Contact/Contact.cshtml
+++ b/RACdotcom/Views/Contact/Contact.cshtml
@@ -6,8 +6,8 @@
     <h1>Contact Info</h1>
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <p>my projects on <a href="https://github.com/rye720">github</a></p>
-            <p>my <a href="https://www.linkedin.com/in/ryan-compton-662b05110">linkedin</a> profile</p>
+            <p>my projects on <a href="https://github.com/rye720" target="_blank">github</a></p>
+            <p>my <a href="https://www.linkedin.com/in/ryan-compton-662b05110" target="_blank">linkedin</a> profile</p>
             <p>e-mail me: at my <a href="mailto:racomp01@gmail.com">Gmail</a> or at <a href="mailto:ryan.compton@ZIRMED.com">work</a></p>
         </div>
     </div>
