--- a/RACdotcom/Views/Pro/Pro.cshtml
+++ b/RACdotcom/Views/Pro/Pro.cshtml
@@ -23,14 +23,14 @@
                 <p>
                     &nbsp;&nbsp;While in school, I exposed myself to as many
                     different tools, languages, and ways to get involved with programming
-                    as I could find. I competed in <a href="http://derbyhacks.io/#/home">hackathons</a>,
-                    cyber defense <a href="http://www.nationalccdc.org/">competitions</a>, and
-                    ACM programming contests</a>.
-                    I presented this <a href="https://www.youtube.com/watch?v=MpCtwFzW-P0>">robot</a>
-                    at <a href="https://scholarworks.iu.edu/conferences/index.php/iuurc/iuurc21/paper/view/279">
+                    as I could find. I competed in <a href="http://derbyhacks.io/#/home" target="_blank">hackathons</a>,
+                    cyber defense <a href="http://www.nationalccdc.org/" target="_blank">competitions</a>, and
+                    ACM programming contests.
+                    I presented this <a href="https://www.youtube.com/watch?v=MpCtwFzW-P0>" target="_blank">robot</a>
+                    at <a href="https://scholarworks.iu.edu/conferences/index.php/iuurc/iuurc21/paper/view/279" target="_blank">
                         research conferences
                     </a> and implemented a genetic algorithm in an attempt to
-                    <a href="https://github.com/rye720/GreenMonkeys">simulate population biology</a>.
+                    <a href="https://github.com/rye720/GreenMonkeys" target="_blank">simulate population biology</a>.
                 </p>
                 <p>
                     &nbsp;&nbsp;Professionally, I spent a year working with ASP.NET web forms
