--- a/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
+++ b/RACdotcom/Views/Shared/_HeaderNavBar.cshtml
@@ -1,7 +1,7 @@
-﻿<ul class="topnav" id="customNav">
+﻿<ul id="customNav" class="topnav">
     <li id="homeBtn">@Html.ActionLink("Ryan A. Compton", "Index", "Home")</li>
     <li id="careerBtn">@Html.ActionLink("Career", "Pro", "Pro")</li>
     <li id="contactBtn">@Html.ActionLink("Contact", "Contact", "Contact")</li>
-    <li><a href="~/Resume/RAC_resume_2017.pdf">Résumé</a></li>
+    <li id="resumeBtn"><a href="~/Resume/RAC_resume_2017.pdf">Résumé</a></li>
     <li class="icon"><a id="navToggle"style="font-size:15px;">☰</a></li>
 </ul>
