--- a/RACdotcom/Views/Shared/_Layout.cshtml
+++ b/RACdotcom/Views/Shared/_Layout.cshtml
@@ -13,5 +13,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/customJS")
     <script async src='https://www.google-analytics.com/analytics.js'></script>
+    
+    @RenderSection("scripts", required: false)
 </body>
 </html>
